fixing the z-index

--- a/Hotel Booking App/css/style.css
+++ b/Hotel Booking App/css/style.css
@@ -25,6 +25,12 @@ body {
   left: 30%;
   border-radius: 30px;
 }
+.cover-text {
+  width: 100%;
+  height: inherit;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
 .btn {
   display: flex;
   justify-content: right;
@@ -52,9 +58,10 @@ body {
   color: white;
   font-weight: 900;
   font-size: 40px;
+  z-index: 1;
 }
 .desc {
-  padding: 40px;
+  padding: 20px;
   font-size: 30px;
   color: rgb(6, 105, 95);
 }
